discussion/kv_engine/172594/172594_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49919: Remove engine-level background stat task creation

The frontend now creates a StatsTask to gather any bucket stats, so
creating a second task at the engine level is redundant.

Change-Id: I3fe1d68233d811f1007312207e3ea2ad7a795026

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-21 12:37:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 13:04:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5767/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18200/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18200/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17879/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17879/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18912/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26285/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16109/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13: error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine" [clang-diagnostic-error]
    engine->doConnAggStats(
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:1010:21: note: declared protected here
    cb::engine_errc doConnAggStats(const BucketStatCollector& collector,
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16109/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13:
error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16109/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44575/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc(2337): error C2065: "COUCHSTORE_ERROR_SCAN_ABORTED": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44575/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5825/ : FAILURE

Compile error at [2022-03-21T13:01:43.158Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2337:29:
error: ?COUCHSTORE_ERROR_SCAN_ABORTED? was not declared in this scope; did you mean ?COUCHSTORE_ERROR_SCAN_CANCELLED??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16954/ : FAILURE

Compile error at [2022-03-21T13:02:12.465Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2337:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_ABORTED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16954/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15038/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
